# attention

./: .gitignore  CLAUDE.md  sign_language_ai_parameters_analysis.xml
attention_test/: Cargo.toml  README.md
attention_test/data/: training_data.txt
attention_test/src/: attention.rs  main.rs  matrix.rs
transformer_burn/: Cargo.toml
transformer_burn/data/: training_data_jsl.txt
transformer_burn/docs/: jsl_tagset.md
transformer_burn/models/test/: README.md  config.json  metrics.json
transformer_burn/src/: checkpoint.rs  config.rs  data.rs  export.rs  jsl_data.rs  jsl_vocabulary.rs  main.rs  metrics.rs  model.rs  training.rs  vocabulary.rs
translator_ja_en/: Cargo.toml  README.md  test_data_loader.rs
translator_ja_en/data/: british_english.txt  greeting_expansion.txt  simple_sentences.txt  training_data_jsl.txt  translation_data_ja_en.txt  translation_data_ja_en.txt.backup  translation_data_ja_en_v2.txt
translator_ja_en/docs/: jsl_tagset.md
translator_ja_en/models/ja_en_test/: README.md  config.json  metrics.json
translator_ja_en/models/test/: README.md  config.json  metrics.json
translator_ja_en/src/: checkpoint.rs  config.rs  data.rs  inference.rs  jsl_data.rs  lib.rs  main.rs  metrics.rs  translation_checkpoint.rs  translation_data.rs  translation_inference.rs  translation_model.rs  translation_training.rs  translation_vocabulary.rs
translator_ja_en/tests/: checkpoint_test.rs
