[package]
name = "translator_ja_en"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.18.0", features = ["wgpu", "autodiff", "ndarray"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
csv = "1.3"
